<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicineInfo"
    android:background="@drawable/gradient_background">

    <View
        android:id="@+id/medicineNameBaseFrame"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_gradient_rectangle_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/closeButtonImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/closeButtonImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/close_button_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/lightBlue2"
        app:tabIndicatorColor="@color/black"
        app:tabSelectedTextColor="@color/yellow"
        app:tabTextColor="@color/black"
        android:contentDescription="@string/tabMedicine"
        app:tabTextAppearance="@style/TabLayoutTextStyle"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/viewPager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout" />

    <TextView
        android:id="@+id/medicineName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jura"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/placeholder_medicine_texts"
        app:layout_constraintBottom_toBottomOf="@+id/medicineNameBaseFrame"
        app:layout_constraintEnd_toEndOf="@+id/medicineNameBaseFrame"
        app:layout_constraintStart_toStartOf="@+id/medicineNameBaseFrame"
        app:layout_constraintTop_toTopOf="@+id/medicineNameBaseFrame" />

</androidx.constraintlayout.widget.ConstraintLayout>